--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
-MONGODB_URI=tu_uri_de_mongodb
+MONGO_URI=mongodb+srv://tallerUser:tallerPass@tu-cluster.mongodb.net/taller
+PORT=5000
+CLOUDINARY_CLOUD_NAME=tu_nombre
+CLOUDINARY_API_KEY=tu_key
+CLOUDINARY_API_SECRET=tu_secret
