Limpieza: ignorando node_modules correctamente

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb+srv://tallerUser:tallerPass@tu-cluster.mongodb.net/taller
+MONGO_URI=mongodb+srv://tallerUser:Costura2026@clustertaller.kbytwvf.mongodb.net/taller?retryWrites=true&w=majority
 PORT=5000
-CLOUDINARY_CLOUD_NAME=tu_nombre
-CLOUDINARY_API_KEY=tu_key
-CLOUDINARY_API_SECRET=tu_secret
+CLOUDINARY_CLOUD_NAME=dg1kg7aya
+CLOUDINARY_API_KEY=153365352489837
+CLOUDINARY_API_SECRET=VqFmI9mZL8oNu5bO_YJfAnVzBd8
